fix not show domain archive on compnay detail view, and fix button logout and fix selects on firefox

--- a/src/sass/components/_panels.scss
+++ b/src/sass/components/_panels.scss
@@ -22,6 +22,11 @@
     padding: 10px 4px;
     transition: all .3s;
 
+    > div {
+      max-width: 50%;
+      width: 100%;
+    }
+
     .heading-buttons {
       max-width: 50%;
     }
